@@ -30,6 +30,7 @@ import static org.tinymediamanager.core.Constants.IMDB;
 import static org.tinymediamanager.core.Constants.MEDIA_FILES;
 import static org.tinymediamanager.core.Constants.MEDIA_INFORMATION;
 import static org.tinymediamanager.core.Constants.REMOVED_EPISODE;
+import static org.tinymediamanager.core.Constants.REMOVED_SEASON;
 import static org.tinymediamanager.core.Constants.RUNTIME;
 import static org.tinymediamanager.core.Constants.SEASON;
 import static org.tinymediamanager.core.Constants.SEASON_COUNT;
@@ -58,7 +59,6 @@ import java.util.Collection;
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.Date;
-import java.util.EnumMap;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.LinkedHashSet;
@@ -68,7 +68,6 @@ import java.util.Set;
 import java.util.concurrent.CopyOnWriteArrayList;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 
 import org.apache.commons.io.FilenameUtils;
 import org.apache.commons.lang3.StringUtils;
@@ -119,6 +118,7 @@ import org.tinymediamanager.scraper.entities.MediaArtwork;
 import org.tinymediamanager.scraper.entities.MediaArtwork.MediaArtworkType;
 import org.tinymediamanager.scraper.entities.MediaCertification;
 import org.tinymediamanager.scraper.entities.MediaEpisodeGroup;
+import org.tinymediamanager.scraper.entities.MediaEpisodeNumber;
 import org.tinymediamanager.scraper.util.ListUtils;
 import org.tinymediamanager.scraper.util.StrgUtils;
 import org.tinymediamanager.scraper.util.TvUtils;
@@ -135,52 +135,55 @@ import com.fasterxml.jackson.annotation.JsonSetter;
  * @author Manuel Laggner
  */
 public class TvShow extends MediaEntity implements IMediaInformation {
-  private static final Logger                                          LOGGER                     = LoggerFactory.getLogger(TvShow.class);
-  private static final Comparator<MediaFile>                           MEDIA_FILE_COMPARATOR      = new TvShowMediaFileComparator();
+  private static final Logger                     LOGGER                     = LoggerFactory.getLogger(TvShow.class);
+  private static final Comparator<MediaFile>      MEDIA_FILE_COMPARATOR      = new TvShowMediaFileComparator();
 
-  public static final Pattern                                          SEASON_ONLY_PATTERN        = Pattern
-      .compile("^(s|staffel|season|series)[\\s_.-]*(\\d{1,4})$", Pattern.CASE_INSENSITIVE);
+  public static final Pattern                     SEASON_ONLY_PATTERN        = Pattern.compile("^(s|staffel|season|series)[\\s_.-]*(\\d{1,4})$",
+      Pattern.CASE_INSENSITIVE);
 
   @JsonProperty
-  private int                                                          runtime                    = 0;
+  private int                                     runtime                    = 0;
   @JsonProperty
   @JsonFormat(shape = JsonFormat.Shape.STRING, pattern = "yyyy-MM-dd")
-  private Date                                                         firstAired                 = null;
+  private Date                                    firstAired                 = null;
   @JsonProperty
-  private MediaAiredStatus                                             status                     = MediaAiredStatus.UNKNOWN;
+  private MediaAiredStatus                        status                     = MediaAiredStatus.UNKNOWN;
   @JsonProperty
-  private String                                                       sortTitle                  = "";
+  private String                                  sortTitle                  = "";
   @JsonProperty
-  private MediaCertification                                           certification              = MediaCertification.UNKNOWN;
+  private MediaCertification                      certification              = MediaCertification.UNKNOWN;
   @JsonProperty
-  private String                                                       country                    = "";
+  private String                                  country                    = "";
   @JsonProperty
-  private MediaEpisodeGroup                                            episodeGroup               = MediaEpisodeGroup.DEFAULT_AIRED;
+  private MediaEpisodeGroup                       episodeGroup               = MediaEpisodeGroup.DEFAULT_AIRED;
   @JsonProperty
-  private final List<MediaGenres>                                      genres                     = new CopyOnWriteArrayList<>();
+  private final List<MediaGenres>                 genres                     = new CopyOnWriteArrayList<>();
   @JsonProperty
-  private int                                                          top250                     = 0;
+  private int                                     top250                     = 0;
   @JsonProperty
-  private final List<Person>                                           actors                     = new CopyOnWriteArrayList<>();
+  private final List<Person>                      actors                     = new CopyOnWriteArrayList<>();
   @JsonProperty
-  private final List<TvShowEpisode>                                    dummyEpisodes              = new CopyOnWriteArrayList<>();
+  private final List<TvShowEpisode>               dummyEpisodes              = new CopyOnWriteArrayList<>();
   @JsonProperty
-  private final List<String>                                           extraFanartUrls            = new CopyOnWriteArrayList<>();
+  private final List<String>                      extraFanartUrls            = new CopyOnWriteArrayList<>();
   @JsonProperty
-  private final List<MediaTrailer>                                     trailer                    = new CopyOnWriteArrayList<>();
+  private final List<MediaTrailer>                trailer                    = new CopyOnWriteArrayList<>();
   @JsonProperty
-  private final Map<MediaEpisodeGroup.EpisodeGroup, MediaEpisodeGroup> episodeGroups              = new EnumMap<>(
-      MediaEpisodeGroup.EpisodeGroup.class);
+  private final List<MediaEpisodeGroup>           episodeGroups              = new CopyOnWriteArrayList<>();
+  @JsonProperty
+  private final Map<String, Map<Integer, String>> seasonNames                = new HashMap<>();
+  @JsonProperty
+  private final Map<String, Map<Integer, String>> seasonOverviews            = new HashMap<>();
 
-  private final List<TvShowSeason>                                     seasons                    = new CopyOnWriteArrayList<>();
-  private final List<TvShowEpisode>                                    episodes                   = new CopyOnWriteArrayList<>();
-  private String                                                       titleSortable              = "";
-  private String                                                       otherIds                   = "";
-  private Date                                                         lastWatched                = null;
+  private final List<TvShowSeason>                seasons                    = new CopyOnWriteArrayList<>();
+  private final List<TvShowEpisode>               episodes                   = new CopyOnWriteArrayList<>();
+  private String                                  titleSortable              = "";
+  private String                                  otherIds                   = "";
+  private Date                                    lastWatched                = null;
 
-  private final PropertyChangeListener                                 propertyChangeListener;
+  private final PropertyChangeListener            propertyChangeListener;
 
-  private static final Comparator<MediaTrailer>                        TRAILER_QUALITY_COMPARATOR = new MediaTrailer.QualityComparator();
+  private static final Comparator<MediaTrailer>   TRAILER_QUALITY_COMPARATOR = new MediaTrailer.QualityComparator();
 
   /**
    * Instantiates a tv show. To initialize the propertychangesupport after loading
@@ -313,12 +316,22 @@ public class TvShow extends MediaEntity implements IMediaInformation {
       actors.clear();
       extraFanartUrls.clear();
       episodeGroups.clear();
+      seasonNames.clear();
+      seasonOverviews.clear();
     }
 
     setGenres(other.genres);
     setActors(other.actors);
     setExtraFanartUrls(other.extraFanartUrls);
-    setEpisodeGroups(other.episodeGroups.values());
+    setEpisodeGroups(other.episodeGroups);
+
+    for (var entry : other.seasonNames.entrySet()) {
+      seasonNames.putIfAbsent(entry.getKey(), entry.getValue());
+    }
+
+    for (var entry : other.seasonOverviews.entrySet()) {
+      seasonOverviews.putIfAbsent(entry.getKey(), entry.getValue());
+    }
 
     // seasons
     for (TvShowSeason otherSeason : other.getSeasons()) {
@@ -430,9 +443,36 @@ public class TvShow extends MediaEntity implements IMediaInformation {
     this.episodeGroup = newValue;
     firePropertyChange(Constants.EPISODE_GROUP, oldValue, newValue);
 
-    // also fire the event for all episodes too
-    for (TvShowEpisode episode : getEpisodesForDisplay()) {
-      episode.firePropertyChange(Constants.EPISODE_GROUP, oldValue, newValue);
+    // also rebuild the seasons and fire the event for all episodes too
+    if (!oldValue.equals(newValue)) {
+      // remove all episodes from all seasons
+      seasons.forEach(TvShowSeason::removeAllEpisodes);
+
+      // and rebuild
+      for (TvShowEpisode episode : getEpisodesForDisplay()) {
+        // add to new season
+        TvShowSeason season = getOrCreateSeason(episode.getSeason());
+
+        // make sure the season is in the UI
+        firePropertyChange(ADDED_SEASON, null, season);
+
+        // add the episode to it
+        season.addEpisode(episode);
+        episode.firePropertyChange(Constants.EPISODE_GROUP, oldValue, newValue);
+      }
+
+      // remove empty seasons
+      for (TvShowSeason season : new ArrayList<>(seasons)) {
+        if (season.isEmpty()) {
+          removeSeason(season);
+        }
+      }
+
+      // update the season names/overviews
+      for (TvShowSeason season : getSeasons()) {
+        season.setTitle(getSeasonName(season.getSeason()));
+        season.setPlot(getSeasonOverview(season.getSeason()));
+      }
     }
   }
 
@@ -442,21 +482,120 @@ public class TvShow extends MediaEntity implements IMediaInformation {
    * @return a {@link List} of all names {@link MediaEpisodeGroup}s
    */
   public List<MediaEpisodeGroup> getEpisodeGroups() {
-    return new ArrayList<>(episodeGroups.values());
+    return Collections.unmodifiableList(episodeGroups);
   }
 
   /**
    * set the list of "named" {@link MediaEpisodeGroup}s for this TV show
    *
-   * @param newValue
+   * @param newValues
    *          the {@link List} of all named {@link MediaEpisodeGroup}s
    */
-  public void setEpisodeGroups(Collection<MediaEpisodeGroup> newValue) {
+  public void setEpisodeGroups(Collection<MediaEpisodeGroup> newValues) {
     episodeGroups.clear();
-    for (MediaEpisodeGroup eg : newValue) {
-      episodeGroups.putIfAbsent(eg.getEpisodeGroup(), eg);
+
+    // sort by episode groups (same order as in MediaEpisodeGroup.EpisodeGroup)
+    for (MediaEpisodeGroup.EpisodeGroupType eg : MediaEpisodeGroup.EpisodeGroupType.values()) {
+      // special logic: the chosen episode group must be the first one in the list
+      if (episodeGroup != null && episodeGroup.getEpisodeGroupType() == eg) {
+        if (newValues.contains(episodeGroup)) {
+          episodeGroups.add(episodeGroup);
+        }
+      }
+
+      // add all (remaining) episode numbers for this type
+      newValues.forEach(group -> {
+        if (group.getEpisodeGroupType() == eg && !episodeGroups.contains(group)) {
+          episodeGroups.add(group);
+        }
+      });
     }
+
     firePropertyChange("episodeGroups", null, episodeGroups);
+  }
+
+  /**
+   * set all season names
+   *
+   * @param newValue
+   *          a {@link Map} containing all season names
+   */
+  public void setSeasonNames(Map<MediaEpisodeGroup, Map<Integer, String>> newValue) {
+    seasonNames.clear();
+    for (var entry : newValue.entrySet()) {
+      seasonNames.putIfAbsent(entry.getKey().toString(), entry.getValue());
+    }
+    firePropertyChange("seasonNames", null, seasonNames);
+  }
+
+  /**
+   * get all season names
+   *
+   * @return a {@link Map} containing all season names
+   */
+  public Map<String, Map<Integer, String>> getSeasonNames() {
+    return Collections.unmodifiableMap(seasonNames);
+  }
+
+  /**
+   * get the season name for the chosen {@link MediaEpisodeGroup}
+   *
+   * @param season
+   *          the season to get the name for
+   * @return the found season name or an empty {@link String}
+   */
+  String getSeasonName(int season) {
+    Map<Integer, String> seasonNamesForEpisodeGroup = seasonNames.get(episodeGroup.toString());
+    if (seasonNamesForEpisodeGroup != null) {
+      String seasonName = seasonNamesForEpisodeGroup.get(season);
+      if (StringUtils.isNotBlank(seasonName)) {
+        return seasonName;
+      }
+    }
+
+    return "";
+  }
+
+  /**
+   * set all season overviews
+   *
+   * @param newValue
+   *          a {@link Map} containing all season overviews
+   */
+  public void setSeasonOverviews(Map<MediaEpisodeGroup, Map<Integer, String>> newValue) {
+    seasonOverviews.clear();
+    for (var entry : newValue.entrySet()) {
+      seasonOverviews.putIfAbsent(entry.getKey().toString(), entry.getValue());
+    }
+    firePropertyChange("seasonOverviews", null, seasonOverviews);
+  }
+
+  /**
+   * get all season overviews
+   *
+   * @return a {@link Map} containing all season overviews
+   */
+  public Map<String, Map<Integer, String>> getSeasonOverviews() {
+    return Collections.unmodifiableMap(seasonOverviews);
+  }
+
+  /**
+   * get the season overview for the chosen {@link MediaEpisodeGroup}
+   *
+   * @param season
+   *          the season to get the overview for
+   * @return the found season name or an empty {@link String}
+   */
+  String getSeasonOverview(int season) {
+    Map<Integer, String> seasonOverviewForEpisodeGroup = seasonOverviews.get(episodeGroup.toString());
+    if (seasonOverviewForEpisodeGroup != null) {
+      String seasonName = seasonOverviewForEpisodeGroup.get(season);
+      if (StringUtils.isNotBlank(seasonName)) {
+        return seasonName;
+      }
+    }
+
+    return "";
   }
 
   /**
@@ -484,10 +623,17 @@ public class TvShow extends MediaEntity implements IMediaInformation {
 
     firePropertyChange(ADDED_EPISODE, null, episode);
     firePropertyChange(EPISODE_COUNT, oldValue, episodes.size());
+
+    // probably also add the episode group from this episode
+    for (MediaEpisodeNumber episodeNumber : episode.getEpisodeNumbers()) {
+      if (!episodeGroups.contains(episodeNumber.episodeGroup())) {
+        episodeGroups.add(episodeNumber.episodeGroup());
+      }
+    }
   }
 
   public List<TvShowEpisode> getDummyEpisodes() {
-    return dummyEpisodes;
+    return Collections.unmodifiableList(dummyEpisodes);
   }
 
   public void setDummyEpisodes(List<TvShowEpisode> dummyEpisodes) {
@@ -567,7 +713,7 @@ public class TvShow extends MediaEntity implements IMediaInformation {
    * @return a {@link List} of all episodes
    */
   public List<TvShowEpisode> getEpisodesForSeason(int season) {
-    return episodes.stream().filter(episode -> episode.getSeason() == season).collect(Collectors.toList());
+    return episodes.stream().filter(episode -> episode.getSeason() == season).toList();
   }
 
   /**
@@ -637,6 +783,8 @@ public class TvShow extends MediaEntity implements IMediaInformation {
     // no one found - create one
     if (season == null) {
       season = new TvShowSeason(episode.getSeason(), this);
+      season.setTitle(getSeasonName(episode.getSeason()));
+      season.setPlot(getSeasonOverview(episode.getSeason()));
       addSeason(season);
     }
 
@@ -676,6 +824,8 @@ public class TvShow extends MediaEntity implements IMediaInformation {
 
     if (season == null) {
       season = new TvShowSeason(seasonNumber, this);
+      season.setTitle(getSeasonName(seasonNumber));
+      season.setPlot(getSeasonOverview(seasonNumber));
       addSeason(season);
     }
 
@@ -768,6 +918,15 @@ public class TvShow extends MediaEntity implements IMediaInformation {
       seasons.add(season);
 
       firePropertyChange(ADDED_SEASON, null, season);
+      firePropertyChange(SEASON_COUNT, seasonCount, seasons.size());
+    }
+  }
+
+  void removeSeason(TvShowSeason season) {
+    int seasonCount = seasons.size();
+
+    if (seasons.remove(season)) {
+      firePropertyChange(REMOVED_SEASON, null, season);
       firePropertyChange(SEASON_COUNT, seasonCount, seasons.size());
     }
   }
@@ -1059,25 +1218,86 @@ public class TvShow extends MediaEntity implements IMediaInformation {
     }
 
     if (config.contains(TvShowScraperMetadataConfig.SEASON_NAMES)) {
-      for (var entry : metadata.getSeasonNames().entrySet()) {
-        // "Season XX" does not match (and not needed to set)
-        // "Season XX - some name" should be set, so the pattern checks the complete string!
-        Matcher matcher = SEASON_ONLY_PATTERN.matcher(entry.getValue());
-        TvShowSeason season = getOrCreateSeason(entry.getKey());
+      if (!matchFound || overwriteExistingItems) {
+        seasonNames.clear();
+        seasons.forEach(season -> season.setTitle(""));
+      }
 
-        if (!matcher.find()) {
-          if (overwriteExistingItems || StringUtils.isBlank(season.getTitle())) {
-            season.setTitle(entry.getValue());
+      for (var episodeGroupEntry : metadata.getSeasonNames().entrySet()) {
+        // only set season names for stored episode groups
+        if (!episodeGroups.contains(episodeGroupEntry.getKey())) {
+          continue;
+        }
+
+        Map<Integer, String> seasonNamesForEpisodeGroup = seasonNames.computeIfAbsent(episodeGroupEntry.getKey().toString(), k -> new HashMap<>());
+
+        for (var entry : episodeGroupEntry.getValue().entrySet()) {
+          // "Season XX" does not match (and not needed to set)
+          // "Season XX - some name" should be set, so the pattern checks the complete string!
+          Matcher matcher = SEASON_ONLY_PATTERN.matcher(entry.getValue());
+          if (!matcher.find()) {
+            if (overwriteExistingItems) {
+              seasonNamesForEpisodeGroup.put(entry.getKey(), entry.getValue());
+            }
+            else {
+              seasonNamesForEpisodeGroup.putIfAbsent(entry.getKey(), entry.getValue());
+            }
+          }
+
+          // live update of the season
+          if (episodeGroupEntry.getKey().equals(episodeGroup)) {
+            TvShowSeason season = getSeason(entry.getKey());
+            if (season != null) {
+              String seasonName = seasonNamesForEpisodeGroup.get(entry.getKey());
+              if (StringUtils.isNotBlank(seasonName)) {
+                season.setTitle(seasonName);
+              }
+              else {
+                season.setTitle("");
+              }
+            }
           }
         }
+
       }
     }
 
     if (config.contains(TvShowScraperMetadataConfig.SEASON_OVERVIEW)) {
-      for (var entry : metadata.getSeasonOverview().entrySet()) {
-        TvShowSeason season = getOrCreateSeason(entry.getKey());
-        if (overwriteExistingItems || StringUtils.isBlank(season.getPlot())) {
-          season.setPlot(entry.getValue());
+      if (!matchFound || overwriteExistingItems) {
+        seasonOverviews.clear();
+        seasons.forEach(season -> season.setPlot(""));
+      }
+
+      for (var episodeGroupEntry : metadata.getSeasonOverview().entrySet()) {
+        // only set season names for stored episode groups
+        if (!episodeGroups.contains(episodeGroupEntry.getKey())) {
+          continue;
+        }
+
+        Map<Integer, String> seasonOverViewsForEpisodeGroup = seasonOverviews.computeIfAbsent(episodeGroupEntry.getKey().toString(),
+            k -> new HashMap<>());
+
+        for (var entry : episodeGroupEntry.getValue().entrySet()) {
+          if (overwriteExistingItems) {
+            seasonOverViewsForEpisodeGroup.put(entry.getKey(), entry.getValue());
+          }
+          else {
+            seasonOverViewsForEpisodeGroup.putIfAbsent(entry.getKey(), entry.getValue());
+          }
+
+          // live update of the season
+          if (episodeGroupEntry.getKey().equals(episodeGroup)) {
+            TvShowSeason season = getSeason(entry.getKey());
+            if (season != null) {
+              String seasonPlot = seasonOverViewsForEpisodeGroup.get(entry.getKey());
+              if (StringUtils.isNotBlank(seasonPlot)) {
+                season.setPlot(seasonPlot);
+              }
+              else {
+                season.setPlot("");
+              }
+            }
+          }
         }
       }
     }
@@ -1831,7 +2051,7 @@ public class TvShow extends MediaEntity implements IMediaInformation {
       return Collections.emptyList();
     }
 
-    return this.episodes.stream().filter(e -> e.getSeason() == season && e.getEpisode() == episode).collect(Collectors.toList());
+    return this.episodes.stream().filter(e -> e.getSeason() == season && e.getEpisode() == episode).toList();
   }
 
   /**
